--- a/bookstore/templates/publisher/about.html
+++ b/bookstore/templates/publisher/about.html
@@ -26,8 +26,7 @@
 <div class="row">
 	<div class="col-sm-4"></div>
 	<div class="form-group">
-<p>This is BookApp, Django web based online library system founded by <strong>Noel Moses Mwadende</strong>, 
-founder & CEO of <strong>MotechApp YouTube channel and motechapp.com</strong>.The main aim of BookApp is to <strong>connect people</strong>
+<p>This is BookApp, Django web based online library system founded by <strong>Vaibhav Kulkarni</strong>.The main aim of BookApp is to <strong>connect people</strong>
 who have home based personal library into one library so as to share different books from different
 countries across the globe. For that purpose, people can upload books they want to share but also they access
 shared books from other users.</p>
